[project]
name = "comfyui_mittimi_load_presetlite"
description = "This node can easily switch between models and prompts by saving presets."
version = "0.9.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/mittimi/ComfyUI_mittimiLoadPresetLite"

[tool.comfy]
PublisherId = "mittimi"
DisplayName = "ComfyUI_mittimiLoadPresetLite"
Icon = ""
